log
Thu May 12 15:11:18 UTC 2022: 
 tests:  0|5
total_score: 0/70
fc841e0
Thu May 12 15:19:22 UTC 2022: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:16: error: implicit declaration of function ‘is_value’; did you mean ‘is_valid’? [-Werror=implicit-function-declaration]
             if(is_value(n)) {
                ^~~~~~~~
                is_valid
sudoku.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
8840d07
Thu May 12 15:19:30 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
fbfd954
Thu May 12 15:19:54 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
1442205
Thu May 12 15:20:08 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
28310c1
Thu May 12 15:26:53 UTC 2022: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:3: error: expected identifier or ‘(’ before ‘for’
   for (int i = 0; i <= 9; i++) {
   ^~~
sudoku.c:49:19: error: ‘i’ undeclared (first use in this function)
   for (int i = 0; i <= 9; i++) {
                   ^
sudoku.c:49:19: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:49:30: error: expected ‘;’ before ‘)’ token
   for (int i = 0; i <= 9; i++) {
                              ^
sudoku.c:49:30: error: expected statement before ‘)’ token
sudoku.c:52:5: error: expected expression before ‘}’ token
     }
     ^
Compilation failed
ce2ea4d
Thu May 12 15:27:13 UTC 2022: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3058bff
Thu May 12 15:38:48 UTC 2022: 
 sudoku.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:7: error: variable ‘k’ set but not used [-Werror=unused-but-set-variable]
   int k;
       ^
cc1: all warnings being treated as errors
Compilation failed
d1d567b
Thu May 12 15:38:57 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:55:9: error: ‘k’ undeclared (first use in this function)
         k = n->sudo[i][j];
         ^
sudoku.c:55:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4d5b4fe
Thu May 12 15:39:15 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:7: error: variable ‘k’ set but not used [-Werror=unused-but-set-variable]
   int k;
       ^
cc1: all warnings being treated as errors
Compilation failed
2a3f9e5
Thu May 12 15:39:38 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:7: error: variable ‘k’ set but not used [-Werror=unused-but-set-variable]
   int k = 0;
       ^
cc1: all warnings being treated as errors
Compilation failed
77cdf18
Thu May 12 15:40:51 UTC 2022: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
20d770f
